many minor fixes, bump version to 5 since some method names also changed